--- a/final/package.json
+++ b/final/package.json
@@ -18,9 +18,9 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
-    "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
+    "mongodb": "^4.3.0",
     "nodemon": "^2.0.15",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
